[package]
name = "ftpbrowser"
version = "0.1.0"
description = "Modern FTP browser"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "shell-open", "fs-all", "dialog-all", "custom-protocol", "system-tray" ] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
suppaftp = { version = "7", default-features = false, features = ["native-tls"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp"] }
nom-exif = "2.5.4"
chrono = { version = "0.4", default-features = false, features = ["std"] }
base64 = "0.22"
windows = { version = "0.54", features = ["Win32_Foundation", "Win32_UI_Shell", "Win32_System_Com", "Win32_Graphics_Gdi"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[features]
default = [ "system-tray", "custom-protocol" ]
system-tray = []
custom-protocol = []

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
